Update Deep Learning with Keras.ipynb

--- a/Deep Learning with Keras.ipynb
+++ b/Deep Learning with Keras.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building a Neural Network Model with Kera"
+    "# Building a Neural Network Model with Keras"
    ]
   },
   {
